--- a/package.json
+++ b/package.json
@@ -10,18 +10,31 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.3",
     "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
+    "gsap": "3.12.7",
     "vue": "^3.5.13"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
-    "@vitejs/plugin-vue": "^5.2.1",
     "@types/node": "20.14.8",
-
+    "@vitejs/plugin-vue": "^5.2.1",
+    "autoprefixer": "^10.4.21",
+    "concurrently": "9.0.1",
+    "cross-env": "7.0.3",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-n": "17.10.1",
+    "eslint-plugin-security": "3.0.0",
+    "eslint-plugin-vue": "9.28.0",
+    "postcss": "^8.5.3",
+    "postcss-import": "16.1.0",
+    "postcss-nesting": "13.0.0",
+    "tailwindcss": "^4.1.3",
     "typescript": "~5.6.2",
+    "unplugin-auto-import": "19.1.2",
     "vite": "^6.0.3",
-    "vue-tsc": "^2.1.10",
-    "unplugin-auto-import": "19.1.2"
+    "vue-tsc": "^2.1.10"
   }
 }
