--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@lucky-canvas/vue": "^0.1.11",
     "@tailwindcss/postcss": "^4.1.3",
     "@tauri-apps/api": "^2.4.1",
     "@tauri-apps/plugin-opener": "^2",
