--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue": "^3.5.13"
   },
   "devDependencies": {
+    "@iconify-json/fluent-color": "^1.2.11",
     "@tauri-apps/cli": "^2",
     "@types/node": "20.14.8",
     "@vitejs/plugin-vue": "^5.2.1",
