--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@lucky-canvas/vue": "^0.1.11",
     "@tailwindcss/postcss": "^4.1.3",
     "@tauri-apps/api": "^2.4.1",
+    "@tauri-apps/plugin-fs": "~2",
     "@tauri-apps/plugin-opener": "^2",
     "gsap": "3.12.7",
     "vue": "^3.5.13"
