--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,4 +23,6 @@ tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 tauri-plugin-fs = "2"
-
+base64 = "0.22.1"
+# known-folders = "1.2.0" # 这个包在macos上会报错 ,仅限windows使用
+anyhow = "1.0.98"
