--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,11 +18,17 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = [] }
+tauri = { version = "2.5.0", features = [] }
 tauri-plugin-opener = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+tauri-plugin-log = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-tauri-plugin-fs = "2"
 base64 = "0.22.1"
 # known-folders = "1.2.0" # 这个包在macos上会报错 ,仅限windows使用
 anyhow = "1.0.98"
+sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }
+tokio = { version = "1", features = ["full"] }
+
+
