--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -7,6 +7,10 @@ on:
 
 permissions:
   contents: write
+  packages: write
+  issues: write
+  pull-requests: write
+  repository-projects: write
 
 jobs:
   build-and-release:
@@ -14,7 +18,7 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          - os: ubuntu-latest
+          - os: ubuntu-22.04
             target: x86_64-unknown-linux-gnu
           - os: macos-latest
             target: x86_64-apple-darwin
@@ -30,10 +34,12 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install dependencies (Ubuntu)
-        if: matrix.platform.os == 'ubuntu-latest'
+        if: matrix.platform.os == 'ubuntu-22.04'
         run: |
           sudo apt-get update
-          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf libsoup-3.0-dev libsoup-3.0 libsoup3
+          sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
+          # Install the correct libsoup for the system
+          sudo apt-get install -y libsoup-3.0-dev || sudo apt-get install -y libsoup2.4-dev
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
@@ -81,9 +87,10 @@ jobs:
           releaseDraft: false
           prerelease: false
           args: --verbose
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload artifacts (Linux)
-        if: matrix.platform.os == 'ubuntu-latest'
+        if: matrix.platform.os == 'ubuntu-22.04'
         uses: actions/upload-artifact@v4
         with:
           name: linux-build
