--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -38,6 +38,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
+          sudo apt-get install -y libjavascriptcoregtk-4.1-dev
           # Install the correct libsoup for the system
           sudo apt-get install -y libsoup-3.0-dev || sudo apt-get install -y libsoup2.4-dev
 
