chore: 更新版本号至 0.1.7

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "tauri": "tauri"
+    "tauri": "tauri",
+    "sync-version": "node scripts/sync-version.js"
   },
   "dependencies": {
     "@lucky-canvas/vue": "^0.1.11",
