--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "yry-pro",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.8",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "tauri": "tauri",
-    "sync-version": "node scripts/sync-version.js"
+    "sync-version": "node scripts/sync-version.cjs"
   },
   "dependencies": {
     "@lucky-canvas/vue": "^0.1.11",
