--- a/.github/workflows/tauri-build copy.yml
+++ b/.github/workflows/tauri-build copy.yml
@@ -18,12 +18,12 @@ jobs:
       fail-fast: false
       matrix:
         platform:
-          # - os: macos-latest
-          #   target: x86_64-apple-darwin
+          - os: macos-latest
+            target: x86_64-apple-darwin
           - os: macos-latest
             target: aarch64-apple-darwin
-          # - os: windows-latest
-          #   target: x86_64-pc-windows-msvc
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
 
     runs-on: ${{ matrix.platform.os }}
 
@@ -98,11 +98,11 @@ jobs:
             target/release/bundle/macos/*.app
             target/release/bundle/dmg/*.dmg
 
-      # - name: 上传构建产物（Windows）
-      #   if: matrix.platform.os == 'windows-latest'
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: windows-build
-      #     path: |
-      #       target/release/bundle/msi/*.msi
-      #       target/release/bundle/nsis/*.exe
+      - name: 上传构建产物（Windows）
+        if: matrix.platform.os == 'windows-latest'
+        uses: actions/upload-artifact@v4
+        with:
+          name: windows-build
+          path: |
+            target/release/bundle/msi/*.msi
+            target/release/bundle/nsis/*.exe
