--- a/.github/workflows/tauri-build.yml
+++ b/.github/workflows/tauri-build.yml
@@ -76,7 +76,7 @@ jobs:
       - name: 构建Tauri应用
         uses: tauri-apps/tauri-action@v0
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }} # 使用个人访问令牌替代 GITHUB_TOKEN
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # 使用个人访问令牌替代 GITHUB_TOKEN
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }} # 如果需要签名
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }} # 如果需要签名
           TAURI_TARGET: ${{ matrix.platform.target }}
@@ -87,7 +87,7 @@ jobs:
           releaseDraft: false
           prerelease: false
           args: --verbose --debug
-          token: ${{ secrets.GH_PAT }} # 同样使用个人访问令牌
+          token: ${{ secrets.GITHUB_TOKEN }} # 同样使用个人访问令牌
 
       - name: 发布失败时的诊断步骤
         if: failure()
@@ -95,15 +95,15 @@ jobs:
           echo "发布过程失败，正在收集诊断信息..."
           echo "检查 GitHub API 限制状态"
           if [[ "${{ matrix.platform.os }}" == *"macos"* ]] || [[ "${{ matrix.platform.os }}" == *"ubuntu"* ]]; then
-            curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/rate_limit
+            curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/rate_limit
           else
-            curl.exe -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/rate_limit
+            curl.exe -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/rate_limit
           fi
           echo "检查是否存在与此标签相关的 release"
           if [[ "${{ matrix.platform.os }}" == *"macos"* ]] || [[ "${{ matrix.platform.os }}" == *"ubuntu"* ]]; then
-            curl -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}
+            curl -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}
           else
-            curl.exe -s -H "Authorization: token ${{ secrets.GH_PAT }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}
+            curl.exe -s -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" https://api.github.com/repos/${{ github.repository }}/releases/tags/${{ github.ref_name }}
           fi
         shell: bash
 
